# data-structure

array/: .clang-format  CMakeLists.txt  README.md
array/inc/: array.h  utils.h
array/src/: array.c  main.c
linked_list/: CMakeLists.txt  README.md  linked_list.excalidraw
linked_list/inc/: linked_list.h  utils.h
linked_list/src/: linked_list.c  main.c
linux-list/: CMakeLists.txt  linux_list.excalidraw
linux-list/include/: list.h  student.h  types.h  utils.h
linux-list/src/: list.c  main.c  student.c
